--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -1,13 +1,10 @@
 $light: #E5E5E5;
-$base-color: #FFFFFF;
+$base-color: #FFF;
 $blue-color: #3369F3;
 $font: 'Inter';
 $main-text-color: #1E1E1E;
 
 @mixin border-radius($radius) {
-  -webkit-border-radius: $radius;
-  -moz-border-radius: $radius;
-  -ms-border-radius: $radius;
   border-radius: $radius;
 }
 
