--- a/src/pages/chats/chats.scss
+++ b/src/pages/chats/chats.scss
@@ -3,6 +3,7 @@ $base-color: #FFF;
 $blue-color: #3369F3;
 $font: 'Inter';
 $main-text-color: #1E1E1E;
+$hiden-text-color: #999;
 
 @mixin border-radius($radius) {
   border-radius: $radius;
@@ -30,16 +31,89 @@ $main-text-color: #1E1E1E;
     background: #FBFBFB;
     border-right: 1px solid #EAEAEA;
     align-items: center;
+
+    &__search-frofile{
+      height: 80px;
+      width: 310px;
+      margin: 0 auto;
+     
+    }
+
+    &__profile{
+      display: block;
+      text-align: right;
+      font-size: 12px;
+      text-decoration: none;
+      margin: 5px 5px 0 0;
+    }
+
+    &__search{
+      height: 40px;
+      margin: 0 auto;
+      border-bottom: 1px solid #EAEAEA;
+    }
+
+    &__search-input{
+      height: 32px;
+
+      @include border-radius(5px);
+
+      width:290px;
+      background: #efefef;
+      border: none ;
+      margin: 20px auto;
+      display: block;
+      padding: 1px 4px;
+
+      &:focus {
+        outline: none;
+      }
+      
+    }
+
+    &__chats-wrpper{
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      width: 310px;
+    }
+    
+
   }
 
   .chat {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content:start;
     align-items: stretch;
 
+    &__header{
+      display: flex;
+      align-items: center;
+      padding: 7px;
+      border-bottom: 1px solid #eaeaea
+      }
+
+    &__chat-settings{
+      text-decoration: none;
+      margin-left: auto;
+
+      &::after{
+        content: '\2807';
+        font-size: 26px;      
+      }
+    }
+
+    &__chat-logo{
+      width: 47px;
+      height: 47px;
+      border-radius: 50%;
+      margin: auto 10px;
+    }
+
     .chat-form {
+      margin-top: auto;
       display: flex;
       justify-content: center;
       height: max-content;
@@ -58,6 +132,9 @@ $main-text-color: #1E1E1E;
 
     }
 
+    &__submit button {
+      @include button-reset
+    }
 
   }
 }
