--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@import 'https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap';
 
 * {
   margin: 0;
@@ -9,5 +9,5 @@
 main {
   width: 100%;
   height: 100%;
-  font-family: 'Inter', sans-serif;
+  font-family: Inter, sans-serif;
 }
